# CppProjectBase

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/actions/: compress_artifacts.yml  install_tools.yml  run_tests.yml
.github/actions/build_linux/: action.yml
.github/actions/build_windows/: action.yml
.github/actions/compress_artifacts/: action.yml
.github/actions/install_tools/: action.yml
.github/actions/publish_release/: action.yml
.github/actions/run_tests/: action.yml
.github/workflows/: build_and_release.yml
build_scripts/: build_windows.bat  conan_installer.bat  test.bat
scripts/: build_linux.sh  build_windows.bat  copy_linux_libs.sh  test.sh
